my-home-cluster/infra/vault/templates/ingress-route.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: vault-tls
  namespace: infra-vault
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`vault.kube.home`)
      services:
        - name: vault-ui
          port: 8200
  tls:
    passthrough: true
